; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_amd64_edac.c_amd64_handle_ce.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_amd64_edac.c_amd64_handle_ce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_ctl_info = type { %struct.amd64_pvt* }
%struct.amd64_pvt = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mem_ctl_info*, i32, i32)* }
%struct.mce = type { i32 }

@MCI_STATUS_ADDRV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"HW has no ERROR_ADDRESS available\0A\00", align 1
@EDAC_MOD_STR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"CE ERROR_ADDRESS= 0x%llx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mem_ctl_info*, %struct.mce*)* @amd64_handle_ce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @amd64_handle_ce(%struct.mem_ctl_info* %0, %struct.mce* %1) #0 {
  %3 = alloca %struct.mem_ctl_info*, align 8
  %4 = alloca %struct.mce*, align 8
  %5 = alloca %struct.amd64_pvt*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mem_ctl_info* %0, %struct.mem_ctl_info** %3, align 8
  store %struct.mce* %1, %struct.mce** %4, align 8
  %8 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %9 = getelementptr inbounds %struct.mem_ctl_info, %struct.mem_ctl_info* %8, i32 0, i32 0
  %10 = load %struct.amd64_pvt*, %struct.amd64_pvt** %9, align 8
  store %struct.amd64_pvt* %10, %struct.amd64_pvt** %5, align 8
  %11 = load %struct.mce*, %struct.mce** %4, align 8
  %12 = getelementptr inbounds %struct.mce, %struct.mce* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @MCI_STATUS_ADDRV, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %2
  %18 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %19 = call i32 (%struct.mem_ctl_info*, i8*, ...) @amd64_mc_err(%struct.mem_ctl_info* %18, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %20 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %21 = load i32, i32* @EDAC_MOD_STR, align 4
  %22 = call i32 @edac_mc_handle_ce_no_info(%struct.mem_ctl_info* %20, i32 %21)
  br label %42

23:                                               ; preds = %2
  %24 = load %struct.mce*, %struct.mce** %4, align 8
  %25 = call i32 @get_error_address(%struct.mce* %24)
  store i32 %25, i32* %6, align 4
  %26 = load %struct.mce*, %struct.mce** %4, align 8
  %27 = getelementptr inbounds %struct.mce, %struct.mce* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @extract_syndrome(i32 %28)
  store i32 %29, i32* %7, align 4
  %30 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 (%struct.mem_ctl_info*, i8*, ...) @amd64_mc_err(%struct.mem_ctl_info* %30, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i32 %31)
  %33 = load %struct.amd64_pvt*, %struct.amd64_pvt** %5, align 8
  %34 = getelementptr inbounds %struct.amd64_pvt, %struct.amd64_pvt* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32 (%struct.mem_ctl_info*, i32, i32)*, i32 (%struct.mem_ctl_info*, i32, i32)** %36, align 8
  %38 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* %7, align 4
  %41 = call i32 %37(%struct.mem_ctl_info* %38, i32 %39, i32 %40)
  br label %42

42:                                               ; preds = %23, %17
  ret void
}

declare dso_local i32 @amd64_mc_err(%struct.mem_ctl_info*, i8*, ...) #1

declare dso_local i32 @edac_mc_handle_ce_no_info(%struct.mem_ctl_info*, i32) #1

declare dso_local i32 @get_error_address(%struct.mce*) #1

declare dso_local i32 @extract_syndrome(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
